# claude-crypto

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  default.profraw  main.cpp
.github/workflows/: ci-full.yml  ci-pr.yml  ci.yml
claude-crypto/: CMakeLists.txt  aead.hpp  asymmetric.hpp  claude_crypto.cpp  claude_crypto.hpp  crypto_error.hpp  crypto_provider.hpp  defs.hpp  digests.hpp  ecc.hpp  ecdh.hpp  kdf.hpp  mac.hpp  psa_backend.hpp  random.hpp  secure_buffer.hpp  sigma.hpp  sigma_i.hpp
claude-crypto-test/: CMakeLists.txt  aead_tests.hpp  asymmetric_tests.hpp  chacha20_tests.hpp  digests_tests.hpp  ecc_tests.hpp  ecdh_tests.hpp  init_tests.hpp  kdf_tests.hpp  mac_tests.hpp  main.cpp  md_tests.hpp  mock_psa_backend.hpp  psa_error_tests.hpp  secure_buffer_tests.hpp  sigma_i_tests.hpp  sigma_tests.hpp  test_utils.hpp
cmake/: PermBuildOptions.cmake  PermCLI11.cmake  PermGBenchmark.cmake  PermGTest.cmake  PermLibOqs.cmake  PermMbedTLS.cmake  PermNlohmannJson.cmake  PermSpdlog.cmake
providers/: CMakeLists.txt
providers/arm_asm/: .clang-tidy  CMakeLists.txt  aes256.hpp  aes256_gcm.hpp  arm-asm-plan.md  arm_asm_backend.hpp  chacha20.hpp  chacha20_poly1305.hpp  dilithium_ntt_neon.cpp  ec_key_store.hpp  ecdsa.hpp  ghash.hpp  hkdf.hpp  hmac.hpp  keccak.hpp  key_store.hpp  p256_field.hpp  p256_point.hpp  p384_field.hpp  p384_point.hpp  p521_field.hpp  p521_point.hpp  poly1305.hpp  pqc_key_store.hpp  random.hpp  rsa.hpp  rsa_bigint.hpp  rsa_der.hpp  rsa_keygen.hpp  rsa_oaep.hpp  rsa_pss.hpp  sha256.hpp  sha3.hpp  sha512.hpp  target_attr.hpp
providers/ia_asm/: .clang-tidy  CMakeLists.txt  aes256.hpp  aes256_gcm.hpp  chacha20.hpp  chacha20_poly1305.hpp  defs.hpp  ecdsa.hpp  ghash.hpp  hkdf.hpp  hmac.hpp  ia-asm-plan.md  ia_asm_backend.hpp  keccak.hpp  key_store.hpp  poly1305.hpp  rsa.hpp  rsa_oaep.hpp  rsa_pss.hpp  sha256.hpp  sha3.hpp  sha512.hpp
providers/liboqs/: CMakeLists.txt  arm_sha3_callbacks.hpp  liboqs_pqc.hpp
providers/openssl/: CMakeLists.txt  openssl_backend.hpp  openssl_key_store.hpp
providers/psa_mbedtls/: CMakeLists.txt  pqc_key_store.hpp  psa_mbedtls_backend.hpp
reviews/: codex-security-review-2026-05-02.md
safe-crypto-cli/: CMakeLists.txt  cli_base64.hpp  cli_error.hpp  cli_io.hpp  cli_logging.hpp  cmd_aead.hpp  cmd_digest.hpp  cmd_ecdh.hpp  cmd_ecdsa.hpp  cmd_kdf.hpp  cmd_mac.hpp  cmd_ml_dsa.hpp  cmd_ml_kem.hpp  cmd_random.hpp  cmd_rsa.hpp  cmd_slh_dsa.hpp  main.cpp
safe-crypto-cli-test/: CMakeLists.txt  aead_tests.hpp  cli_test_runner.hpp  digest_tests.hpp  ecdh_tests.hpp  ecdsa_tests.hpp  help_tests.hpp  io_tests.hpp  kdf_tests.hpp  log_config_tests.hpp  logging_tests.hpp  mac_tests.hpp  main.cpp  ml_dsa_tests.hpp  ml_kem_tests.hpp  random_tests.hpp  rsa_tests.hpp  slh_dsa_tests.hpp
safe-crypto-lib/: CMakeLists.txt  aead.hpp  asymmetric.hpp  contracts.hpp  crypto_error.hpp  crypto_log.hpp  crypto_provider.hpp  defs.hpp  digests.hpp  ecc.hpp  ecdh.hpp  kdf.hpp  mac.hpp  ml_dsa_variant.hpp  ml_kem_variant.hpp  pqc_dsa.hpp  pqc_kem.hpp  provider.hpp  psa_backend.hpp  random.hpp  secure_buffer.hpp  sha_variant.hpp  sigma.hpp  sigma_i.hpp  slh_dsa_variant.hpp
safe-crypto-lib-bench/: CMakeLists.txt  bench_main.cpp
safe-crypto-lib-test/: CMakeLists.txt  aead_tests.hpp  arm_asm_tests.hpp  asymmetric_tests.hpp  chacha20_tests.hpp  cross_provider_tests.hpp  crypto_log_tests.hpp  digests_tests.hpp  ecc_tests.hpp  ecdh_tests.hpp  ia_asm_tests.hpp  init_tests.hpp  kdf_tests.hpp  mac_tests.hpp  main.cpp  ml_dsa_tests.hpp  ml_kem_tests.hpp  mock_psa_backend.hpp  pqc_cross_provider_tests.hpp  psa_error_tests.hpp  random_tests.hpp  rsa_bigint_tests.hpp  rsa_der_tests.hpp  rsa_keygen_tests.hpp  rsa_oaep_tests.hpp  rsa_pss_tests.hpp  secure_buffer_tests.hpp  sigma_i_tests.hpp  sigma_tests.hpp  slh_dsa_tests.hpp  test_utils.hpp
